# MooGPT

./: .gitignore  CLAUDE.md  CMakeLists.txt  PROJECT_PLAN.md  README.md
data/: PERSONA.md  generate_dialogues.py  persona_seed.txt  safety_filter.py  tiny.txt
docs/: notes.md
reference/: check.py  check_grads.py  export_weights.py  model.py
src/: attention.cpp  attention.h  block.cpp  block.h  bpe.cpp  bpe.h  config.h  dataloader.cpp  dataloader.h  forward_cuda.cu  loss.cpp  loss.h  main.cpp  mlp.cpp  mlp.h  model.cpp  model.h  ops.cpp  ops.h  optimizer.cpp  optimizer.h  tensor.cpp  tensor.h  tokenizer.cpp  tokenizer.h
tests/: test_bpe.cpp  test_data.cpp  test_grad.cpp  test_ops.cpp  test_optim.cpp
